load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "proto_proto",
    srcs = [
        "kdc.conf.proto",
        "krb5.conf.proto",
    ],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "proto_go_proto",
    compilers = ["//pkg/cmd/protoc-gen-gogoroach:protoc-gen-gogoroach_compiler"],
    importpath = "github.com/cockroachdb/cockroach/c-deps/krb5/src/kadmin/testing/proto",
    proto = ":proto_proto",
    visibility = ["//visibility:public"],
)
